2008-05-29  Anders Carlsson  <andersca@apple.com>

        Reviewed by Brady.

        <rdar://problem/5970312> 
        icon file specified for stand alone web app causes crash if the icon can't be found
        
        Handle the case where iconData is null.
        
        * Misc/WebIconFetcher.mm:
        (WebIconFetcherClient::finishedFetchingIcon):

2008-05-29  Anders Carlsson  <andersca@apple.com>

        Reviewed by Mitz.

        <rdar://problem/5971845>
        https://bugs.webkit.org/show_bug.cgi?id=19313
        Add version member to NPCocoaEvent

        Initialize the version member to 0 for all events.
        
        * Plugins/WebNetscapePluginEventHandlerCocoa.mm:
        (initializeEvent):
        (WebNetscapePluginEventHandlerCocoa::drawRect):
        (WebNetscapePluginEventHandlerCocoa::sendMouseEvent):
        (WebNetscapePluginEventHandlerCocoa::flagsChanged):
        (WebNetscapePluginEventHandlerCocoa::sendKeyEvent):
        (WebNetscapePluginEventHandlerCocoa::windowFocusChanged):
        (WebNetscapePluginEventHandlerCocoa::focusChanged):

2008-05-29  Dan Bernstein  <mitz@apple.com>

        Reviewed by Jessica Kahn.

        - fix <rdar://problem/5965013> Page 2 does not print correctly

        When printing, _recursiveDisplayRectIfNeededIgnoringOpacity:... and
        _recursiveDisplayAllDirtyWithLockFocus:... can be invoked without
        -viewWillDraw being sent first, which could lead to painting without
        valid layout. The fix is to ensure up-to-date layout in those methods
        when printing.

        * WebView/WebHTMLView.mm:
        (-[WebHTMLView _recursiveDisplayRectIfNeededIgnoringOpacity:isVisibleRect:rectIsVisibleRectForView:topView:]):
        (-[WebHTMLView _recursiveDisplayAllDirtyWithLockFocus:visRect:]):

2008-05-27  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Tim Hatcher.
        
        Fixed https://bugs.webkit.org/show_bug.cgi?id=19183